--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="30">
-    <title>Kanna Coco - Home</title>
+    <title>Kanna ✨ - Home</title>
     <meta name="theme-color" content="#EE82EE">
-    <meta content="Kanna Coco | A Discord Bot" property="og:title">
-    <meta content="Kanna Coco Provides a fun economy and RPG game developed by Mirabellier where you can fight Anime character bosses, win Anime character images, and fight with other players." property="og:description">
-    <meta content="Kanna Coco" property="og:site_name">
+    <meta content="Kanna ✨ | A Discord Bot" property="og:title">
+    <meta content="Kanna ✨ Provides a fun economy and RPG game developed by Mirabellier where you can fight Anime character bosses, win Anime character images, and fight with other players." property="og:description">
+    <meta content="Kanna ✨" property="og:site_name">
     <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Kanna Coco">
+    <meta name="twitter:site" content="Kanna ✨">
     <meta name="twitter:creator" content="@mirabellierr">
-    <meta name="twitter:title" content="Kanna Coco | A Discord Bot">
+    <meta name="twitter:title" content="Kanna ✨ | A Discord Bot">
     <meta name="twitter:description" content="Provides a fun economy and RPG game where you can work every one hour to get coins, choose a character and battle with other users.">
     <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
 	<!-- core CSS -->
@@ -62,7 +62,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                  
-                                    <h2><b>Kanna Coco </b>a discord bot</h2>
+                                    <h2><b>Kanna ✨ </b>a discord bot</h2>
                                     <p>A multi-purpose, RPG and Economy bot<br/> with a lot of features.</p>
                                     <a class="btn btn-primary btn-lg" href="https://www.kannacoco.me/invite/">Invite Now</a>
                                 
@@ -77,7 +77,7 @@
 
             <div class="section-header">
                 <h2 class="section-title wow fadeInDown">Commands</h2>
-                <p class="wow fadeInDown">Kanna Coco has over 100+ commands.</p>
+                <p class="wow fadeInDown">Kanna ✨ has over 100+ commands.</p>
             </div>
 
             <div class="row">
@@ -247,8 +247,8 @@
         <div class="container">
 
             <div class="section-header">
-                <h2 class="section-title wow fadeInDown">About Kanna Coco</h2>
-                <p class="wow fadeInDown">Kanna Coco is a discord bot written in Javascript developed by <br>Mirabellier for having fun and enjoying memes</p>
+                <h2 class="section-title wow fadeInDown">About Kanna ✨</h2>
+                <p class="wow fadeInDown">Kanna ✨ is a discord bot written in Javascript developed by <br>Mirabellier for having fun and enjoying memes</p>
             </div>
 
             <div class="row">
@@ -257,9 +257,9 @@
                 </div>
 
                 <div class="col-sm-6 wow fadeInRight">
-                    <h3 class="column-title">Kanna Coco</h3>
-                    <p>Kanna Coco provides a fun economy and RPG game where you can work every one hour to get coins, buy a fishing rod to be able to fish on the river, hunting rifle to be able to hunt in the woods and a laptop for you to get extra coins. You can also spend coins on slots machine and roulette. Plus, you also can play with Kanna Coco mini-games such as hangman and scramble and get 100 coins when you win. Kanna Coco has a simple RPG game where you can choose a character from three different classes, warrior, monk, and wizard. Battle with other users, battle with bosses, level up and buy a weapon to make your character stronger. You will get a random amount of stars when you win. The higher amount of stars you have, the higher your rank on the leaderboard.</p>
- <p>Kanna Coco has a simple RPG game where you can choose a character from three different classes, warrior, monk, and wizard. Battle with other users, battle with bosses, level up and buy a weapon to make your character stronger. You will get a random amount of stars when you win. The higher amount of stars you have, the higher your rank on the leaderboard.</p>
+                    <h3 class="column-title">Kanna ✨</h3>
+                    <p>Kanna ✨ provides a fun economy and RPG game where you can work every one hour to get coins, buy a fishing rod to be able to fish on the river, hunting rifle to be able to hunt in the woods and a laptop for you to get extra coins. You can also spend coins on slots machine and roulette. Plus, you also can play with Kanna ✨ mini-games such as hangman and scramble and get 100 coins when you win. Kanna ✨ has a simple RPG game where you can choose a character from three different classes, warrior, monk, and wizard. Battle with other users, battle with bosses, level up and buy a weapon to make your character stronger. You will get a random amount of stars when you win. The higher amount of stars you have, the higher your rank on the leaderboard.</p>
+ <p>Kanna ✨ has a simple RPG game where you can choose a character from three different classes, warrior, monk, and wizard. Battle with other users, battle with bosses, level up and buy a weapon to make your character stronger. You will get a random amount of stars when you win. The higher amount of stars you have, the higher your rank on the leaderboard.</p>
 <ul class="listarrow">
 <li><i class="fa fa-angle-double-right"></i>Fun</li>
 <li><i class="fa fa-angle-double-right"></i>Simple</li>
@@ -278,7 +278,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title wow fadeInDown">Patreon</h2>
-                <p class="wow fadeInDown">Kanna Coco is running on a slow server. To make Kanna Coco runs faster.<br>I need some funding to afford a real server! Feel free to donate any amount! <3</p>
+                <p class="wow fadeInDown">Kanna ✨ is running on a slow server. To make Kanna ✨ runs faster.<br>I need some funding to afford a real server! Feel free to donate any amount! <3</p>
             </div>
 
             <div class="row">
@@ -410,7 +410,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2021 <a target="_blank" href="https://github.com/MiraBellierr" title="Kanna Coco Developer">MiraBellier</a>
+                    &copy; 2021 <a target="_blank" href="https://github.com/MiraBellierr" title="Kanna ✨ Developer">MiraBellier</a>
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
