--- a/invite.html
+++ b/invite.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="refresh" content="30">
+      <title>Kanna ✨ - Home</title>
+      <meta name="theme-color" content="#EE82EE">
+      <meta content="Kanna ✨ | A Discord Bot" property="og:title">
+      <meta content="Kanna ✨ Provides a fun economy and RPG game developed by Mirabellier where you can fight Anime character bosses, win Anime character images, and fight with other players." property="og:description">
+      <meta content="Kanna ✨" property="og:site_name">
+      <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
+      <meta name="twitter:card" content="summary">
+      <meta name="twitter:site" content="Kanna ✨">
+      <meta name="twitter:creator" content="@mirabellierr">
+      <meta name="twitter:title" content="Kanna ✨ | A Discord Bot">
+      <meta name="twitter:description" content="Provides a fun economy and RPG game where you can work every one hour to get coins, choose a character and battle with other users.">
+      <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
       <title>Invite Me</title>
       <meta http-equiv = "refresh" content = "2; url = https://discord.com/api/oauth2/authorize?client_id=867048396358549544&permissions=0&scope=bot" />
    </head>
