--- a/partner.html
+++ b/partner.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server.">
+    <meta name="description" content="Kanna ✨ partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna ✨? Join our Discord server.">
     <meta name="author" content="Mirabellier">
     <meta name="theme-color" content="#EE82EE">
-    <meta content="Kanna Coco | Partnership List" property="og:title">
-    <meta content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server." property="og:description">
-    <meta content="Kanna Coco" property="og:site_name">
+    <meta content="Kanna ✨ | Partnership List" property="og:title">
+    <meta content="Kanna ✨ partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna ✨? Join our Discord server." property="og:description">
+    <meta content="Kanna ✨" property="og:site_name">
     <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Kanna Coco">
+    <meta name="twitter:site" content="Kanna ✨">
     <meta name="twitter:creator" content="@mirabellierr">
-    <meta name="twitter:title" content="Kanna Coco | Partnership List">
-    <meta name="twitter:description" content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server.">
+    <meta name="twitter:title" content="Kanna ✨ | Partnership List">
+    <meta name="twitter:description" content="Kanna ✨ partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna ✨? Join our Discord server.">
     <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
 
-    <title>Kanna Coco - Partnership</title>
+    <title>Kanna ✨ - Partnership</title>
     <link rel="shortcut icon" href="/images/ico/favicon.ico"> 
 
     <!-- Bootstrap core CSS -->
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
         </button>
           <a class="navbar-brand" href="https://www.kannacoco.me"><img src="/images/logo2.jpg" alt="logo"></a>
-          <a class="navbar-brand" href="https://www.kannacoco.me">Kanna Coco</a>
+          <a class="navbar-brand" href="https://www.kannacoco.me">Kanna ✨</a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
