--- a/support.html
+++ b/support.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Support Server</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Kanna's Kawaii Klubhouse ✨ is a cute community, no toxic is allowed here, join our Discord server now.">
+      <meta name="author" content="Mirabellier">
+      <meta name="theme-color" content="#EE82EE">
+      <meta content="Kanna's Kawaii Klubhouse" property="og:title">
+      <meta content="Kanna's Kawaii Klubhouse ✨ is a cute community, no toxic is allowed here, join our Discord server now." property="og:description">
+      <meta content="Kanna's Kawaii Klubhouse" property="og:site_name">
+      <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
+      <meta name="twitter:card" content="summary">
+      <meta name="twitter:site" content="Kanna's Kawaii Klubhouse">
+      <meta name="twitter:creator" content="@mirabellierr">
+      <meta name="twitter:title" content="Kanna's Kawaii Klubhouse">
+      <meta name="twitter:description" content="Kanna's Kawaii Klubhouse ✨ is a cute community, no toxic is allowed here, join our Discord server now.">
+      <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
+
+      <title>Kanna's Kawaii Klubhouse</title>
       <meta http-equiv = "refresh" content = "2; url = https://discord.gg/NcPeGuNEdc" />
    </head>
    <body>
