--- a/errors/auth-reqd.html
+++ b/errors/auth-reqd.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-  <title>Kanna Coco - 401 Authorization Required</title>
+  <title>Kanna ✨ - 401 Authorization Required</title>
   <style>
     a:link {
       color: green;
